--- a/draft.ipynb
+++ b/draft.ipynb
@@ -19,7 +19,8 @@
     "\n",
     "Última verificação: 11/02/2025\n",
     "\n",
-    "***\n"
+    "***\n",
+    "\n"
    ]
   },
   {
@@ -68,22 +69,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Sobre o LIneA "
+    "### Sobre o LIneA \n",
+    "\n",
+    "O Laboratório Interinstitucional de e-Astronomia (LIneA) é um laboratório multiusuário operado por uma organização sem fins lucrativos (Associação LIneA) com apoio do governo federal através do Ministério da Ciência, Tecnologia e Inovação. Nossa missão é apoiar a comunidade astronômica com infraestrutura computacional e expertise em análise de big data, fornecendo condições técnicas para participação brasileira em grandes levantamentos, como o Sloan Digital Sky Survey (SDSS), Dark Energy Survey (DES) e Legacy Survey of Space and Time (LSST). Para saber mais, acesse o nosso site **https://linea.org.br**, visite nosso [canal no YouTube (@linea_org)](https://www.youtube.com/@linea_org) e os nossos perfis nas redes sociais.  "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "%%html\n",
+    "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/4oiEKtzTkTA?si=mepeI8-Th0chWsQe\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" referrerpolicy=\"strict-origin-when-cross-origin\" allowfullscreen></iframe>"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,7 +99,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Sobre os dados"
+    "#### Sobre os dados\n",
+    "\n",
+    "Os dados que usaremos nesta atividades são dados liberados pelo levantamento "
    ]
   },
   {
@@ -104,7 +109,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Os dados eu"
+   ]
   },
   {
    "cell_type": "code",
@@ -318,7 +325,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train.to_csv('training_set.csv')\n",
+    "test.to_csv('test_set.csv')"
+   ]
   },
   {
    "cell_type": "code",
@@ -358,6 +368,17 @@
    },
    "outputs": [],
    "source": [
+    "! conda install astropy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "! pip install astropy"
    ]
   },
@@ -373,10 +394,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "bibliotecas de visualização "
    ]
@@ -486,10 +505,12 @@
     "plt.subplot(1,2,1)\n",
     "sns.histplot(train['z'], stat='density', bins=30, label='training set')\n",
     "sns.histplot(test['z'], stat='density', bins=30, label='test set')\n",
+    "plt.xlabel('spec-z', fontsize=12)\n",
     "plt.legend()\n",
     "plt.subplot(1,2,2)\n",
     "sns.histplot(train['z'], stat='count', bins=30, label='training set')\n",
     "sns.histplot(test['z'], stat='count', bins=30, label='test set')\n",
+    "plt.xlabel('spec-z', fontsize=12)\n",
     "plt.tight_layout()"
    ]
   },
@@ -510,10 +531,12 @@
     "plt.subplot(1,2,1)\n",
     "sns.histplot(train['mag_auto_i_dered'], stat='density', bins=30, label='training set')\n",
     "sns.histplot(test['mag_auto_i_dered'], stat='density', bins=30, label='test set')\n",
+    "plt.xlabel('i-band magnitude', fontsize=12)\n",
     "plt.legend()\n",
     "plt.subplot(1,2,2)\n",
     "sns.histplot(train['mag_auto_i_dered'], stat='count', bins=30, label='training set')\n",
     "sns.histplot(test['mag_auto_i_dered'], stat='count', bins=30, label='test set')\n",
+    "plt.xlabel('i-band magnitude', fontsize=12)\n",
     "plt.tight_layout()"
    ]
   },
@@ -532,7 +555,7 @@
    "source": [
     "fig = plt.figure()\n",
     "rmi = train[]\n",
-    "sns.scatterplot(data=train, x='mag_auto_i_dered', y=')\n",
+    "#sns.scatterplot(data=train, x='mag_auto_i_dered', y=')\n",
     "sns.scatterplot(data=test, x='z', y='mag_auto_i_dered')\n",
     "plt.tight_layout()"
    ]
@@ -546,6 +569,8 @@
     "fig = plt.figure()\n",
     "sns.scatterplot(data=train, x='z', y='mag_auto_i_dered')\n",
     "sns.scatterplot(data=test, x='z', y='mag_auto_i_dered')\n",
+    "plt.xlabel('spec-z', fontsize=12)\n",
+    "plt.ylabel('i-band magnitude', fontsize=12)\n",
     "plt.tight_layout()"
    ]
   },
