link para notebook de descrição do catálogo de spec-zs

--- a/draft.ipynb
+++ b/draft.ipynb
@@ -213,9 +213,16 @@
     "\n",
     "Para treinar os algoritmos de aprendizado de máquina precisamos fornecer medidas conhecidas de **redshift (z)** de um subconjunto dos dados. Para isto, vamos utilizar dados obtidos de levantamentos espectroscópicos (spec-z) que, devido a sua enorme precisão, são considerados como valores \"verdadeiros\", ou seja, com erros nulos. \n",
     "\n",
-    "As medidas de spec-z que vamos utilizar estão disponíveis em um catálogo, já combinado com os dados fotométricos do DES, que foi produzido como parte da contribuição do LIneA para o projeto. A nossa equipe de cientistas de dados fez uma curadoria das medidas de spec-z dos principais levantamentos disponíveis até o último ano de observações do DES (28 levantamentos) e montou um catálogo único de spec-zs, com dados limpos e homogeneizados, associados às galáxias do DES através das posições em coordenadas equatoriais (R.A. e Dec.). Este catálogo foi utilizado para alimentar os conjuntos de treinamento utilizados na produção de medidas de redshift fotométrico (photo-z) que estão sendo utilizadas nos artigos de cosmologia em preparação.  \n",
+    "As medidas de spec-z que vamos utilizar estão disponíveis em um catálogo, já combinado com os dados fotométricos do DES, que foi produzido como parte da contribuição do LIneA para o projeto. A nossa equipe de cientistas de dados fez uma curadoria das medidas de spec-z dos principais levantamentos disponíveis até o último ano de observações do DES (28 levantamentos) e montou um catálogo único de spec-zs, com dados limpos e homogeneizados, associados às galáxias do DES através das posições em coordenadas equatoriais (R.A. e Dec.). Este catálogo foi utilizado para alimentar os conjuntos de treinamento utilizados na produção de medidas de redshift fotométrico (photo-z) que estão sendo utilizadas nos artigos de cosmologia em preparação.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img align=\"center\" src=https://dev.linea.org.br/~julia/specz_spatial_dist.png  width=500 style=\"padding: 20px\"><img align=\"center\" src=https://dev.linea.org.br/~julia/specz_matched_spatial_dist.png width=500 style=\"padding: 20px\">  \n",
     "\n",
-    "<img align=\"center\" src=https://dev.linea.org.br/~julia/specz_spatial_dist.png  width=500 style=\"padding: 20px\"><img align=\"center\" src=https://dev.linea.org.br/~julia/specz_matched_spatial_dist.png width=500 style=\"padding: 20px\">  \n"
+    "Na figura acima observamos a distribuição espacial heterogênea resultante da combinação de várias fontes de dados. No segundo mapa, vemos em destaque as medidas de spec-z que caem dentro da regição observada pelo DES (_footprint_). A caracterização completa desta amostra está disponível na [área de contribuição dos usuários](https://github.com/linea-it/jupyterhub-tutorial/blob/main/users-notebooks/spectroscopic-redshifts.ipynb), no mesmo repositório dos tutoriais do LIneA JupyterHub. "
    ]
   },
   {
