replace links to header logos

--- a/draft.ipynb
+++ b/draft.ipynb
@@ -5,8 +5,8 @@
    "metadata": {},
    "source": [
     "\n",
-    "<img align=\"left\" src=https://www.if.ufrj.br/wp-content/themes/img/if.png         width=120 style=\"padding: 30px\"> \n",
-    "<img align=\"left\" src=https://ufrj.br/wp-content/uploads/2024/02/cor-vertical.png width=100 style=\"padding: 30px\"> <br>\n",
+    "<img align=\"left\" src=https://dev.linea.org.br/~julia/if.png         width=120 style=\"padding: 30px\"> \n",
+    "<img align=\"left\" src=https://dev.linea.org.br/~julia/ufrj.png width=100 style=\"padding: 30px\"> <br>\n",
     "\n",
     "# 7a Escola de Física Experimental da UFRJ  \n",
     "## Medidas de redshifts de galáxias em levantamentos cosmológicos usando técnicas de aprendizado de máquina \n",
