pequenas melhorias no texto

--- a/draft.ipynb
+++ b/draft.ipynb
@@ -5,8 +5,8 @@
    "metadata": {},
    "source": [
     "\n",
-    "<img align=\"left\" src=https://dev.linea.org.br/~julia/if.png         width=120 style=\"padding: 30px\"> \n",
-    "<img align=\"left\" src=https://dev.linea.org.br/~julia/ufrj.png width=100 style=\"padding: 30px\"> <br>\n",
+    "<img align=\"left\" src=https://www.if.ufrj.br/wp-content/themes/img/if.png         width=120 style=\"padding: 30px\"> \n",
+    "<img align=\"left\" src=https://ufrj.br/wp-content/uploads/2024/02/cor-vertical.png width=100 style=\"padding: 30px\"> <br>\n",
     "\n",
     "# 7a Escola de Física Experimental da UFRJ  \n",
     "## Medidas de redshifts de galáxias em levantamentos cosmológicos usando técnicas de aprendizado de máquina \n",
@@ -177,7 +177,9 @@
     "from astropy import units as u\n",
     "from astropy.coordinates import SkyCoord\n",
     "import skyproj\n",
-    "import dblinea "
+    "import dblinea \n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -193,16 +195,18 @@
    "source": [
     "#### Sobre os dados\n",
     "\n",
+    "Nesta atividade, usaremos um conjunto de dados previamente combinados e parcialmente tradados, que foram obtidos de diferentes fontes através de diferentes técnicas observacionais.  \n",
+    "\n",
     "##### Dados fotométricos \n",
     "\n",
-    "Nesta atividade, usaremos um conjunto de dados previamente combinados e parcialmente tradados, que foram obtidos de diferentes fontes. Os dados fotométricos são oriundos do [Dark Energy Survey (DES)](https://www.darkenergysurvey.org/), um levantamento fotométrico em 5 bandas do óptico ao infravermelho (_grizY_) que tem como principal objetivo a determinação da equação de estado da energia escura. O DES observou ~700 milhões de objetos detectados em ~5000 graus quadrados no hemisfério sul durante 6 anos. Os artigos com os principais resultados da análise dos dados dos três primeiros anos de observação estão disponíveis [nesta página](https://www.darkenergysurvey.org/des-year-3-cosmology-results-papers/).  \n",
+    "Os dados fotométricos são oriundos do [Dark Energy Survey (DES)](https://www.darkenergysurvey.org/), um levantamento fotométrico em 5 bandas do óptico ao infravermelho (_grizY_) que tem como principal objetivo a determinação da equação de estado da energia escura. O DES observou ~700 milhões de objetos detectados em ~5000 graus quadrados no hemisfério sul durante 6 anos. Os artigos com os principais resultados da análise dos dados dos três primeiros anos de observação estão disponíveis [nesta página](https://www.darkenergysurvey.org/des-year-3-cosmology-results-papers/).  \n",
     "\n",
     "<img align=\"center\" src=https://www.darkenergysurvey.org/wp-content/uploads/2021/06/dr2_footprint.png  width=500 style=\"padding: 20px\"> <br> \n",
     "Figura: Footprint Data Release 2 (fonte: [www.darkenergysurvey.org](https://www.darkenergysurvey.org/wp-content/uploads/2021/06/dr2_footprint.png)).  \n",
     "\n",
     "O [segundo _data release_ (DR2)](https://des.ncsa.illinois.edu/releases/dr2), já contendo os dados dos seis anos de observação, está disponível para público e pode ser acessado pelo [LIneA Science Server](https://scienceserver.linea.org.br) ou aqui pelo JupyterHub, como veremos a seguir. Os artigos finais utilizando os dados dos 6 anos ainda estão em preparação.\n",
     "\n",
-    "Os dados que vamos utilizar já foram extraídos das imagens do céu, pré-processados e disponibilizados de forma tabular no banco de dados. "
+    "Os dados que vamos utilizar já foram extraídos das imagens do céu, pré-processados e disponibilizados de forma tabular no banco de dados. Os observáveis que usaremos como _features_ para treinar o modelo de aprendizagem de máquina serão as magnitudes aparentes nas 5 bandas _grizY_ e seus respectivos erros. "
    ]
   },
   {
@@ -211,9 +215,9 @@
    "source": [
     "##### Dados espectroscópicos \n",
     "\n",
-    "Para treinar os algoritmos de aprendizado de máquina precisamos fornecer medidas conhecidas de **redshift (z)** de um subconjunto dos dados. Para isto, vamos utilizar dados obtidos de levantamentos espectroscópicos (spec-z) que, devido a sua enorme precisão, são considerados como valores \"verdadeiros\", ou seja, com erros nulos. \n",
+    "Para treinar os algoritmos de aprendizado supervisionado de máquina, precisamos fornecer medidas conhecidas (ou _labels_) da variável que estamos tentando calcular, neste caso, de **redshift (z)**, de um subconjunto dos dados. Para isto, vamos utilizar dados obtidos de levantamentos espectroscópicos (spec-z) que, devido a sua enorme precisão quando comparada à fotometria, são considerados como valores \"verdadeiros\", ou seja, com erros nulos. \n",
     "\n",
-    "As medidas de spec-z que vamos utilizar estão disponíveis em um catálogo, já combinado com os dados fotométricos do DES, que foi produzido como parte da contribuição do LIneA para o projeto. A nossa equipe de cientistas de dados fez uma curadoria das medidas de spec-z dos principais levantamentos disponíveis até o último ano de observações do DES (28 levantamentos) e montou um catálogo único de spec-zs, com dados limpos e homogeneizados, associados às galáxias do DES através das posições em coordenadas equatoriais (R.A. e Dec.). Este catálogo foi utilizado para alimentar os conjuntos de treinamento utilizados na produção de medidas de redshift fotométrico (photo-z) que estão sendo utilizadas nos artigos de cosmologia em preparação.  "
+    "As medidas de spec-z que vamos utilizar estão disponíveis em um catálogo, já combinado com os dados fotométricos do DES, que foi produzido como parte da contribuição do LIneA para o projeto. A equipe de cientistas de dados do LIneA fez a curadoria das medidas de spec-z dos principais levantamentos disponíveis até o último ano de observações do DES (28 levantamentos) e montou um catálogo único de spec-zs, com dados limpos e homogeneizados. Esses dados foram associados às galáxias do DES através das posições em coordenadas equatoriais (R.A. e Dec.) através da técnica conhecida como _spatial cross-matching_. Este catálogo foi utilizado para alimentar os conjuntos de treinamento utilizados na produção de medidas de redshift fotométrico (photo-z) que estão sendo utilizadas nos artigos de cosmologia em preparação.  "
    ]
   },
   {
@@ -222,7 +226,7 @@
    "source": [
     "<img align=\"center\" src=https://dev.linea.org.br/~julia/specz_spatial_dist.png  width=500 style=\"padding: 20px\"><img align=\"center\" src=https://dev.linea.org.br/~julia/specz_matched_spatial_dist.png width=500 style=\"padding: 20px\">  \n",
     "\n",
-    "Na figura acima observamos a distribuição espacial heterogênea resultante da combinação de várias fontes de dados. No segundo mapa, vemos em destaque as medidas de spec-z que caem dentro da regição observada pelo DES (_footprint_). A caracterização completa desta amostra está disponível na [área de contribuição dos usuários](https://github.com/linea-it/jupyterhub-tutorial/blob/main/users-notebooks/spectroscopic-redshifts.ipynb), no mesmo repositório dos tutoriais do LIneA JupyterHub. "
+    "Na figura acima observamos a distribuição espacial heterogênea resultante da combinação de várias fontes de dados espectroscópicos da literatura. No segundo mapa, vemos em destaque as medidas de spec-z que caem dentro da regição observada pelo DES (_footprint_). A caracterização completa desta amostra está disponível na [área de contribuição dos usuários](https://github.com/linea-it/jupyterhub-tutorial/blob/main/users-notebooks/spectroscopic-redshifts.ipynb), no mesmo repositório dos tutoriais do LIneA JupyterHub. "
    ]
   },
   {
@@ -309,7 +313,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para esta atividade, vamos selecionar dados do levantamento [VVDS](https://cesam.lam.fr/cesamdata/project_desc/vvds_index.html) ([Le Fèvre et al. 2004](https://ui.adsabs.harvard.edu/abs/2004A%26A...428.1043L/abstract), [Garilli et al. 2008](https://ui.adsabs.harvard.edu/abs/2008A%26A...486..683G/abstract)).  \n"
+    "Para esta atividade, para trabalharmos com uma amostra homogênea e com uma distribuição N(z) pouco ruidosa, vamos selecionar apenas dados do levantamento [VVDS](https://cesam.lam.fr/cesamdata/project_desc/vvds_index.html) ([Le Fèvre et al. 2004](https://ui.adsabs.harvard.edu/abs/2004A%26A...428.1043L/abstract), [Garilli et al. 2008](https://ui.adsabs.harvard.edu/abs/2008A%26A...486..683G/abstract)) para treinar e testar os modelos.   "
    ]
   },
   {
@@ -325,39 +329,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "query = \"\"\"\n",
-    "            SELECT\n",
-    "                ra, dec, z, \n",
-    "                mag_auto_g_dered, mag_auto_r_dered, mag_auto_i_dered, mag_auto_z_dered, mag_auto_y_dered,  \n",
-    "                magerr_auto_g, magerr_auto_r, magerr_auto_i, magerr_auto_z, magerr_auto_y  \n",
-    "            FROM\n",
-    "                des_dr2.public_pz_training_set\n",
-    "            WHERE\n",
-    "                survey = 'VVDS' \n",
-    "            AND \n",
-    "                magerr_auto_g <= 0.1 \n",
-    "            AND \n",
-    "                magerr_auto_r <= 0.1 \n",
-    "            AND \n",
-    "                magerr_auto_i <= 0.1 \n",
-    "            AND \n",
-    "                magerr_auto_z <= 0.1 \n",
-    "            AND \n",
-    "                z <= 2.0 \n",
-    "        \"\"\""
+    "query_spec_sample = \"\"\"\n",
+    "                        SELECT\n",
+    "                            ra, dec, z, \n",
+    "                            mag_auto_g_dered, mag_auto_r_dered, mag_auto_i_dered, mag_auto_z_dered, mag_auto_y_dered,  \n",
+    "                            magerr_auto_g, magerr_auto_r, magerr_auto_i, magerr_auto_z, magerr_auto_y  \n",
+    "                        FROM\n",
+    "                            des_dr2.public_pz_training_set\n",
+    "                        WHERE\n",
+    "                            survey = 'VVDS' \n",
+    "                        AND \n",
+    "                            magerr_auto_g <= 0.1 \n",
+    "                        AND \n",
+    "                            magerr_auto_r <= 0.1 \n",
+    "                        AND \n",
+    "                            magerr_auto_i <= 0.1 \n",
+    "                        AND \n",
+    "                            magerr_auto_z <= 0.1 \n",
+    "                        AND \n",
+    "                            z <= 2.0 \n",
+    "                    \"\"\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true,
     "tags": []
    },
    "outputs": [],
    "source": [
-    "df = db.fetchall_df(query)\n",
-    "df"
+    "%%time\n",
+    "df_spec_sample = db.fetchall_df(query_spec_sample)\n",
+    "df_spec_sample"
    ]
   },
   {
@@ -366,7 +370,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.info()"
+    "df_spec_sample.info()"
    ]
   },
   {
@@ -375,7 +379,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.describe()"
+    "df_spec_sample.describe()"
    ]
   },
   {
@@ -394,10 +398,10 @@
    "outputs": [],
    "source": [
     "# ordenação aleatória com random_state fixo para garantir a reprodutibilidade \n",
-    "df_shuffled = df.sample(frac=1, random_state=42) \n",
+    "df_shuffled = df_spec_sample.sample(frac=1, random_state=42) \n",
     "\n",
     "# ponto de corte: proporção 70/30\n",
-    "split_point = int(len(df)*0.7)\n",
+    "split_point = int(len(df_spec_sample)*0.7)\n",
     "\n",
     "# separa em dois subconjuntos \n",
     "train = df_shuffled.iloc[:split_point]\n",
@@ -428,7 +432,7 @@
    },
    "outputs": [],
    "source": [
-    "coords = SkyCoord(ra=-np.array(df.ra)*u.degree, dec=np.array(df.dec)*u.degree, frame='icrs')"
+    "coords = SkyCoord(ra=-np.array(df_spec_sample.ra)*u.degree, dec=np.array(df_spec_sample.dec)*u.degree, frame='icrs')"
    ]
   },
   {
@@ -466,8 +470,8 @@
    "source": [
     "fig = plt.figure(figsize=[12,4])\n",
     "plt.subplot(1,3,1)\n",
-    "sns.histplot(df['z'], stat='density', bins=30, label='all')\n",
-    "sns.kdeplot(df['z'], fill=False, color='red')\n",
+    "sns.histplot(df_spec_sample['z'], stat='density', bins=30, label='all')\n",
+    "sns.kdeplot(df_spec_sample['z'], fill=False, color='red')\n",
     "plt.xlabel('spec-z', fontsize=11)\n",
     "plt.legend()\n",
     "plt.subplot(1,3,2)\n",
@@ -499,8 +503,8 @@
    "source": [
     "fig = plt.figure(figsize=[12,4])\n",
     "plt.subplot(1,3,1)\n",
-    "sns.histplot(df['mag_auto_i_dered'], stat='density', bins=30, label='all')\n",
-    "sns.kdeplot(df['mag_auto_i_dered'], fill=False, color='red')\n",
+    "sns.histplot(df_spec_sample['mag_auto_i_dered'], stat='density', bins=30, label='all')\n",
+    "sns.kdeplot(df_spec_sample['mag_auto_i_dered'], fill=False, color='red')\n",
     "plt.xlabel('i-band magnitude', fontsize=11)\n",
     "plt.legend()\n",
     "plt.subplot(1,3,2)\n",
@@ -592,11 +596,106 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Treinamento "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Teste / validação "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Aplicação a uma amostra fotométrica (sem _labels_) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query_photo_sample = \"\"\"\n",
+    "                        SELECT\n",
+    "                            ra, dec,  \n",
+    "                            mag_auto_g_dered, mag_auto_r_dered, mag_auto_i_dered, mag_auto_z_dered, mag_auto_y_dered,  \n",
+    "                            magerr_auto_g, magerr_auto_r, magerr_auto_i, magerr_auto_z, magerr_auto_y  \n",
+    "                        FROM\n",
+    "                            des_dr2.main\n",
+    "                        WHERE\n",
+    "                            magerr_auto_g <= 0.1 \n",
+    "                        AND \n",
+    "                            magerr_auto_r <= 0.1 \n",
+    "                        AND \n",
+    "                            magerr_auto_i <= 0.1 \n",
+    "                        AND \n",
+    "                            magerr_auto_z <= 0.1 \n",
+    "                        LIMIT 10000\n",
+    "                    \"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Esta query pode levar mais de 1 minuto: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "df_photo_sample = db.fetchall_df(query_photo_sample)\n",
+    "df_photo_sample"
+   ]
   },
   {
    "cell_type": "code",
