--- a/01_data_preparation.ipynb
+++ b/01_data_preparation.ipynb
@@ -358,15 +358,17 @@
     "                        WHERE\n",
     "                            survey = 'VVDS' \n",
     "                        AND \n",
-    "                            magerr_auto_g != 99.0 \n",
+    "                            magerr_auto_i < 0.1 \n",
     "                        AND \n",
-    "                            magerr_auto_r != 99.0\n",
+    "                            mag_auto_g_dered != 99.0\n",
     "                        AND \n",
-    "                            magerr_auto_i != 99.0\n",
+    "                            mag_auto_r_dered != 99.0\n",
     "                        AND \n",
-    "                            magerr_auto_z != 99.0\n",
+    "                            mag_auto_i_dered != 99.0\n",
     "                        AND \n",
-    "                            magerr_auto_y != 99.0\n",
+    "                            mag_auto_z_dered != 99.0\n",
+    "                        AND \n",
+    "                            mag_auto_y_dered != 99.0\n",
     "                        AND \n",
     "                            z <= 2.0 \n",
     "                    \"\"\""
@@ -450,7 +452,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure(1, figsize=(8, 6))\n",
+    "fig = plt.figure(figsize=(8, 6))\n",
     "ax = fig.add_subplot(111)\n",
     "sp = skyproj.DESSkyproj(ax=ax)\n",
     "sp.draw_des(label='DES footprint', edgecolor='darkorange', lw=1)\n",
@@ -551,19 +553,26 @@
     "                        WHERE \n",
     "                            magerr_auto_i <= 0.1 \n",
     "                        AND \n",
-    "                            magerr_auto_g != 99.0 \n",
+    "                            mag_auto_g_dered != 99.0\n",
     "                        AND \n",
-    "                            magerr_auto_r != 99.0\n",
+    "                            mag_auto_r_dered != 99.0\n",
     "                        AND \n",
-    "                            magerr_auto_i != 99.0\n",
+    "                            mag_auto_i_dered != 99.0\n",
     "                        AND \n",
-    "                            magerr_auto_z != 99.0\n",
+    "                            mag_auto_z_dered != 99.0\n",
     "                        AND \n",
-    "                            magerr_auto_y != 99.0\n",
+    "                            mag_auto_y_dered != 99.0\n",
     "                        AND\n",
     "                            extended_class_coadd = 3\n",
     "                        LIMIT 1000000\n",
     "                    \"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Obs: idealmente esta query deveria ter busca com ordenação aleatória. Esta é uma simplificação de propósito ilustrativo para rodar em pouco tempo durante a atividade. "
    ]
   },
   {
@@ -591,40 +600,10 @@
     "for i, band in enumerate(bands): \n",
     "    plt.subplot(1,5,i+1)\n",
     "    sns.histplot(df_spec_sample[f'mag_auto_{band}_dered'], stat='density', bins=30, label='spec')\n",
-    "    sns.kdeplot(df_photo_sample[f'mag_auto_{band}_dered'], fill=False, color='red', label='photo')\n",
+    "    plt.hist(df_photo_sample[f'mag_auto_{band}_dered'], histtype='step', color='red', lw=2, density=True, bins=50, label='photo')\n",
+    "    #sns.kdeplot(df_photo_sample[f'mag_auto_{band}_dered'], fill=False, color='red', label='photo')\n",
     "    plt.xlabel(f'{band}-band magnitude', fontsize=11)\n",
     "    plt.legend()\n",
-    "plt.tight_layout()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "photo_coords = SkyCoord(ra=-np.array(df_photo_sample.ra)*u.degree, dec=np.array(df_photo_sample.dec)*u.degree, frame='icrs')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = plt.figure(1, figsize=(8, 6))\n",
-    "ax = fig.add_subplot(111)\n",
-    "sp = skyproj.DESSkyproj(ax=ax)\n",
-    "sp.draw_des(label='DES footprint', edgecolor='darkorange', lw=1)\n",
-    "ra_rad = photo_coords.ra.wrap_at(180 * u.deg).radian\n",
-    "dec_rad = photo_coords.dec.radian\n",
-    "plt.plot(ra_rad, dec_rad, '.', alpha=0.3, label='DES')\n",
-    "org=0.0\n",
-    "tick_labels = np.array([150, 120, 90, 60, 30, 0, 330, 300, 270, 240, 210])\n",
-    "tick_labels = np.remainder(tick_labels+360+org,360)\n",
-    "sp.legend()\n",
     "plt.tight_layout()"
    ]
   },
