Correcting errors in the documentation.

--- a/02_running_ml_methods_w_sklearn.ipynb
+++ b/02_running_ml_methods_w_sklearn.ipynb
@@ -36,15 +36,7 @@
     "\n",
     "Esta linguagem é genérica e se aplica a todos os algoritmos, o que é prático para discutir os passos de uma dada análise. Por outro lado, ela obscurece o que está ocorrendo de fato no período de treinamento. Cada método possui seu próprio algoritmo, e estes possuem—na maior parte dos casos!—bases matemáticas robustas, calcadas na estatística e na teoria de otimização.\n",
     "\n",
-    "De forma muito resumida, **redes neurais** implementam numericamente um enorme \"$f\\odot g\\odot h$\" multidimensional, e o que chamamos de \"treinamento\" é o processo de tirar derivadas numéricas desta grande função multidimensional e não-linear buscando minimizar uma _função de perda_ (_loss function_), que no caso mais simples se trata de um $\\chi^2$.\n",
-    "\n",
-    "Já as **árvores de decisão** escolhem blablabalbalb.\n",
-    "\n",
-    "**Florestas aleatórias** são um _ensemble method_ que treina múltiplas árvores de decisão, cada uma com blablablalal, e escolhe blablabla tal que blabalbala.\n",
-    "\n",
-    "Neste notebook, vamos criar conjuntos de treino e teste (seção 1), aplicar cada um dos algoritmos acima aos nossos dados (seção 2) e avaliar sua performance (seção 3).\n",
-    "\n",
-    "**FIXME:** Completar o texto desta célula."
+    "Neste notebook, vamos criar conjuntos de treino e teste, aplicar cada um dos algoritmos acima aos nossos dados e avaliar sua performance."
    ]
   },
   {
@@ -257,7 +249,7 @@
    "id": "08e02730-afdd-4f4a-8f8d-22b9dba22cb6",
    "metadata": {},
    "source": [
-    "# 8. Quality assessment"
+    "# 3. Quality assessment"
    ]
   },
   {
@@ -470,7 +462,7 @@
    "id": "57c6fc59",
    "metadata": {},
    "source": [
-    "# 3. Decision Tree Regression - With colors"
+    "# 4. Decision Tree Regression - With colors"
    ]
   },
   {
