email bruno no header

--- a/01_data_preparation.ipynb
+++ b/01_data_preparation.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "source": [
     "Professores:   \n",
-    "- Bruno Moraes\n",
+    "- Bruno Moraes (moraes@if.ufrj.br) \n",
     "- Julia Gschwend (julia@linea.org.br)\n",
     "\n",
     "Última verificação: 18/02/2025\n",
@@ -606,6 +606,13 @@
     "    plt.legend()\n",
     "plt.tight_layout()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
